miMicroAuth/deploy/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
     app: mimicroauth
  name: mimicroauth
  namespace: despliegues2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimicroauth
  template:
      metadata:
        labels:
          app: mimicroauth
      spec:
        containers:
        - name: mimicroauth-k8s-cfg
          image: calireyes/mimicroauth:1.0
          imagePullPolicy: Always
          ports:
          - containerPort: 8084
            protocol: TCP
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "300m"

---
apiVersion: v1
kind: Service
metadata:
  labels:
     app: mimicroauth
  name: mimicroauth
  namespace: despliegues2
spec:
  type: LoadBalancer
  selector:
    app: mimicroauth
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8084
